--- a/style.css
+++ b/style.css
@@ -1,19 +1,31 @@
 p {
-    background-color: red;
-    color: yellow;
-    padding: 20px;
-    margin: 25px;
-  }
-  #erick {
-    background-color: aqua;
-    color: darkslategrey;
-    padding: 100px;
-    margin: 50px;
-  }
+  background-color: red;
+  color: yellow;
+  padding: 20px;
+  margin: 25px;
+}
+#erick {
+  background-color: aqua;
+  color: darkslategrey;
+  padding: 100px;
+  margin: 50px;
+}
 
-  .enock {
-    background-color: deeppink;
-    color: darksalmon;
-    padding: 20px;
-    margin: 30px;
-  }
+.enock {
+  background-color: deeppink;
+  color: darksalmon;
+  padding: 20px;
+  margin: 30px;
+}
+
+.parent {
+  display: flex;
+  justify-content: space-between;
+}
+
+.secondparent{
+  display: flex;
+}
+.secondparent>*{
+  padding: 10px;
+}
