Add the div with a class name values

--- a/careers.css
+++ b/careers.css
@@ -22,23 +22,23 @@ body{
   border-radius: 40px;
 }
 
-.main .values{
-  background-color: #f0f0f0;
+.values{
+  background-color: gray;
 }
 
-.main .values .cards{
+.values .cards{
   display: flex;
   justify-content: center;
 }
 
-.main .values .cards .card{
+.values .cards .card{
   width: 300px;
+  background-color: white;
+  border-radius: 20px 20px 0 0;
   margin: 20px;
-  background-color: #fff;
-  border-radius: 20px;
 }
 
-.main .values .cards .card img{
+.values .cards .card img{
   width: 300px;
   border-radius: 20px 20px 0 0;
 }
